fixed it by removing overflow:auto

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,5 +9,4 @@
 
 main {
   min-height: 100vh;
-  overflow: auto;
 }
